Fix Findbugs and PMD errors.